# constitutional-runtime

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: act_identity.rs  admission.rs  capability.rs  decision.rs  dossier.rs  evidence.rs  failure.rs  idempotency.rs  ingress.rs  ir.rs  lib.rs  lowering.rs  operational_grammar.rs  plan_executor.rs  planning_compiler.rs  strong_grammar.rs  tier.rs  validation.rs
tests/: constitutional_pipeline.rs  tier_admission.rs  tier_grammar_validation.rs
